Fix horizontal scroll in project view

--- a/src/sass/projects.sass
+++ b/src/sass/projects.sass
@@ -333,6 +333,8 @@
   @extend .section
   color: #67798a
   text-align: center
+  img
+    max-width: 100%
 
 .info-tip
   @extend .i-info
